--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,38 @@
-# Multi-stage (simple) Next.js build + runtime
-FROM node:20-alpine AS base
-ENV NODE_ENV=production
-WORKDIR /app
+# syntax=docker/dockerfile:1
 
-# Install deps first (leverage Docker layer cache)
-# Copy only package manifests if present
-COPY package.json package-lock.json* pnpm-lock.yaml* yarn.lock* ./
+# Comments are provided throughout this file to help you get started.
+# If you need more help, visit the Dockerfile reference guide at
+# https://docs.docker.com/go/dockerfile-reference/
+
+# Want to help us make this template better? Share your feedback here: https://forms.gle/ybq9Krt8jtBL3iCk7
+
+ARG NODE_VERSION=24.4.1
+
+FROM node:${NODE_VERSION}-alpine
+
+# Use production node environment by default.
+ENV NODE_ENV production
 
 
-# Install dependencies
-RUN npm install --legacy-peer-deps
-# Copy the rest of the app
+WORKDIR /usr/src/app
+
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.npm to speed up subsequent builds.
+# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
+# into this layer.
+RUN --mount=type=bind,source=package.json,target=package.json \
+    --mount=type=bind,source=package-lock.json,target=package-lock.json \
+    --mount=type=cache,target=/root/.npm \
+    npm ci --omit=dev
+
+# Run the application as a non-root user.
+USER node
+
+# Copy the rest of the source files into the image.
 COPY . .
 
-# Runtime
+# Expose the port that the application listens on.
 EXPOSE 3000
-# Use npm "start" (expected to be Next.js start) to serve the built app
-CMD ["npm", "run", "start", "--", "-H", "0.0.0.0", "-p", "3000"]
+
+# Run the application.
+CMD npm start
