Refactor API endpoint URLs to use environment variable for base URL
- Updated API_BASE constant in multiple files to use import.meta.env.PUBLIC_API_BASE_URL, defaulting to 'http://localhost:3000' if not set.
- Changed fetch calls to use the new API_BASE constant for consistency and flexibility.
- Modified package.json to change the start script to use run-server.mjs and added express as a dependency.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -63,10 +63,10 @@ COPY package.json .
 # the built application from the build stage into the image.
 COPY --from=deps /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
-
+COPY ./run-server.mjs ./
 
 # Expose the port that the application listens on.
-EXPOSE 4321
+EXPOSE 8080
 
 # Run the application.
-CMD npm run start
+CMD npm start
