--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,14 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "start": "node  ./dist/server/entry.mjs"
+    "start": "node  run-server.mjs"
   },
   "dependencies": {
     "@astrojs/node": "^9.4.4",
     "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/typography": "^0.5.19",
     "astro": "^5.14.1",
+    "express": "^5.1.0",
     "tailwindcss": "^3.4.17"
   }
 }
