--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "mongodb": "^6.20.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
