--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,11 +29,14 @@ RUN --mount=type=bind,source=package.json,target=package.json \
     --mount=type=cache,target=/root/.npm \
     npm ci --omit=dev
 
-# Run the application as a non-root user.
-USER node
-
 # Copy the rest of the source files into the image.
 COPY . .
+
+# Create uploads directory with proper permissions for the node user
+RUN mkdir -p /usr/src/app/uploads && chown node:node /usr/src/app/uploads
+
+# Run the application as a non-root user.
+USER node
 
 # Expose the port that the application listens on.
 EXPOSE 3000
