--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.20.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -30,6 +31,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
